2013-03-30  Darren Ho  <darren.hoo@gmail.com>  (tiny change)

	* nsmenu.m (showAtX:Y:for:): setLevel to
	NSPopUpMenuWindowLevel (Bug#13998).

2013-03-30  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.h (ns_get_pending_menu_title, ns_check_menu_open)
	(ns_check_pending_open_menu): Declare.

	* nsmenu.m (ns_update_menubar): Correct NSTRACE.
	(x_activate_menubar): Update the menu with title that matches
	ns_get_pending_menu_title, and call
	ns_check_pending_openmenu (Bug#12698).
	(menuWillOpen:): New method.
	(menuNeedsUpdate:): Add check for ! COCOA || OSX < 10.5 (Bug#12698).

	* nsterm.m (menu_will_open_state, menu_mouse_point)
	(menu_pending_title): New varaibles.
	(ns_get_pending_menu_title, ns_check_menu_open)
	(ns_check_pending_open_menu): New functions.

2013-03-29  Dmitry Antipov  <dmantipov@yandex.ru>

	* indent.c (current_column_bol_cache): Remove leftover which is not
	used in Fmove_to_column any more.
	(current_column, scan_for_column): Adjust users.
	* keyboard.c (last_point_position_buffer, last_point_position_window):
	Remove leftovers which are not used for recording undo any more.
	(command_loop_1, syms_of_keyboard): Adjust users.
	* xdisp.c (last_max_ascent): Remove leftover which is not used in
	redisplay_window any more.
	(move_it_to): Adjust user.

2013-03-29  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in ($(BLD)/filelock.$(O), $(BLD)/filelock.$(O)):
	Update dependencies.

2013-03-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lisp.h (save_type, XSAVE_POINTER, set_save_pointer, XSAVE_INTEGER)
	(set_save_integer, XSAVE_OBJECT, XSAVE_VALUE): Move to avoid
	forward references.

2013-03-28  Dmitry Antipov  <dmantipov@yandex.ru>

	* window.h (struct window): Replace hchild, vchild and buffer slots
	with the only contents slot.  This is possible because each valid
	window may have either the child window (in vertical or horizontal
	combination) or buffer to display (for the leaf window).  Using that,